<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dp_40"
    android:paddingEnd="@dimen/dp_40"
    android:paddingTop="@dimen/dp_20"
    android:paddingBottom="@dimen/dp_20"
    android:background="@drawable/circle_boder"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/base_lowpower_5"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_lowpower"
        android:layout_gravity="center_horizontal"
        android:textColor="#FF1D3740"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_10"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_lowpower_5"
        android:layout_gravity="center_horizontal"
        android:textColor="#FF62717A"
        android:textSize="10sp"
        />

    <Button
        android:id="@+id/btn_lowpower_ok"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_blue"
        android:text="@string/base_ok"
        android:textColor="#FFFFFFFF"
        android:textSize="15sp"
        />
</LinearLayout>