<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dp_25"
    android:background="@drawable/circle_boder"
    android:orientation="vertical">


    <TextView
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:text="@string/base_upgrade_tip"
        android:layout_gravity="center"
        android:textColor="#FF1D3740"
        android:textSize="15sp"
        android:gravity="center"
        />


    <View
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFCDCED2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_not_now"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="0.5"
            android:text="@string/base_not_now"
            android:gravity="center"
            android:textColor="#FF333333"
            android:textSize="15sp"
            android:background="@null"
            android:textAllCaps="false"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#FFCDCED2"
            />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="0.5"
            android:text="@string/base_update"
            android:gravity="center"
            android:textColor="#FF37AAFF"
            android:textSize="15sp"
            android:background="@null"
            android:textAllCaps="false"
            />

    </LinearLayout>
</LinearLayout>