<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_img_bg"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_age"
        android:textColor="@color/login_text_black_color"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_37"
        android:gravity="center"
        />


    <RelativeLayout
        android:id="@+id/rl_first_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_centerInParent="true"
        >

        <RelativeLayout
            android:id="@+id/rl_age_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_23"
            >
            <ImageView
                android:id="@+id/iv_age_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_gender_selector"
                android:scaleType="fitXY"
                />

            <TextView
                android:id="@+id/tv_age_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_age_less_16"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/login_text_black_color"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@+id/iv_age_less"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_age_16_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/rl_age_less"
            android:layout_marginRight="@dimen/dp_23"
            android:layout_marginLeft="@dimen/dp_23"
            >


            <ImageView
                android:id="@+id/iv_age_16_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_gender_selector"
                android:scaleType="fitXY"
                android:layout_marginRight="@dimen/dp_10"
                />

            <TextView
                android:id="@+id/tv_age_16_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_age_16_24"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/login_text_black_color"
                android:layout_toRightOf="@+id/iv_age_16_24"

                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_age_25_35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/rl_age_16_24"
            android:layout_marginLeft="@dimen/dp_23"
            >

            <ImageView
                android:id="@+id/iv_age_25_35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_gender_selector"
                android:scaleType="fitXY"
                android:layout_marginRight="@dimen/dp_10"
                />

            <TextView
                android:id="@+id/tv_age_25_35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_age_25_35"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/login_text_black_color"
                android:layout_toRightOf="@+id/iv_age_25_35"
                />


        </RelativeLayout>



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_second_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_first_line"
        android:layout_marginTop="@dimen/dp_33"
        android:layout_centerInParent="true"
        >

        <RelativeLayout
            android:id="@+id/rl_age_36_45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_23"
            >

            <ImageView
                android:id="@+id/iv_age_36_45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_gender_selector"
                android:scaleType="fitXY"
                android:layout_marginRight="@dimen/dp_10"

                />

            <TextView
                android:id="@+id/tv_age_36_45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_age_36_45"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/login_text_black_color"
                android:layout_toRightOf="@+id/iv_age_36_45"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_more_45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/rl_age_36_45"
            android:layout_marginLeft="@dimen/dp_23"
            >


            <ImageView
                android:id="@+id/iv_age_more_54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_gender_selector"
                android:scaleType="fitXY"
                android:layout_marginRight="@dimen/dp_10"

                />

            <TextView
                android:id="@+id/tv_age_more_45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_age_46"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/login_text_black_color"
                android:layout_toRightOf="@+id/iv_age_more_54"
                />


        </RelativeLayout>


    </RelativeLayout>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg_login_btn"
        android:text="@string/login_next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_15"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_52"
        android:layout_below="@+id/rl_second_line"
        android:layout_centerInParent="true"
        />

</RelativeLayout>